// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sendResetPasswordMail English renders correctly 1`] = `
{
  "attachments": [],
  "from": "ocelot.social <devops@ocelot.social>",
  "html": "<!DOCTYPE html>
<html lang="en">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 16px;
  text-align: left;
  text-align: -webkit-left;
  line-height: 24px;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  margin-bottom: 30px;
  font-size: 24px;
  font-weight: normal;
  line-height: 24px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 30%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 50px;
}

p.no-margin-top-bottom {
  margin-top: 0;
  margin-bottom: 0;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  text-decoration: none;
  text-align:center;
  padding: 9px 18px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 14px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hello Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p>So, you forgot your password? No problem! Just click the button below to reset it within the next 24 hours:</p><a class="button" href="http://webapp:3000/password-reset/change-password?email=user%40example.org&amp;nonce=123456">Confirm your e-mail address</a>
        <p>If you didn't request a new password feel free to ignore this e-mail.</p>
        <p>If the above button doesn't work you can also copy the following code into your browser window: <span>123456</span></p>
        <div class="text-block">
          <p class="no-margin-top-bottom">See you soon on <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p class="no-margin-top-bottom">– The ocelot.social Team</p>
        </div>
      </div>
      <div class="support">
        <p class="no-margin-top-bottom">If you have questions or problems, feel free to contact our support: <a href="mailto:devops@ocelot.social">devops@ocelot.social</a></p>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "Reset Password ocelot.social",
  "text": "HELLO JENNY ROSTOCK,

So, you forgot your password? No problem! Just click the button below to reset
it within the next 24 hours:

Confirm your e-mail address
[http://webapp:3000/password-reset/change-password?email=user%40example.org&nonce=123456]

If you didn't request a new password feel free to ignore this e-mail.

If the above button doesn't work you can also copy the following code into your
browser window: 123456

See you soon on ocelot.social [https://ocelot.social]!

– The ocelot.social Team

If you have questions or problems, feel free to contact our support:
devops@ocelot.social [devops@ocelot.social]


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;

exports[`sendResetPasswordMail German renders correctly 1`] = `
{
  "attachments": [],
  "from": "ocelot.social <devops@ocelot.social>",
  "html": "<!DOCTYPE html>
<html lang="de">
  <head>
    <meta content="multipart/html; charset=UTF-8" http-equiv="content-type">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
    <style>body{
  display: block;
  font-family: Lato, sans-serif;
  font-size: 16px;
  text-align: left;
  text-align: -webkit-left;
  line-height: 24px;
  justify-content: center;
  padding: 15px;
  margin: 0px;
}

h2 {
  margin-top: 25px;
  margin-bottom: 30px;
  font-size: 24px;
  font-weight: normal;
  line-height: 24px;
  color: #333333;
}

.container {
  max-width: 680px;
  margin: 0 auto;
  display: block;
}

.head-logo {
  width: 30%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 50px;
}

p.no-margin-top-bottom {
  margin-top: 0;
  margin-bottom: 0;
}

a {
  color: #17b53e;
}

a.button {
  background: #17b53e;
  font-family: Lato, sans-serif;
  font-size: 16px;
  text-decoration: none;
  text-align:center;
  padding: 9px 18px;
  color: #ffffff;
  display: table;
  margin-left: auto;
  margin-right: auto;
  border-radius: 4px;
}

.text-block {
  margin-top: 20px;
  color: #000000;
}

footer {
  padding: 20px;
  font-family: Lato, sans-serif;
  font-size: 14px;
  line-height: 15px;
  text-align: center;
  color: #888888;
}

    </style>
  </head>
  <body>
    <div class="container">
      <header>
        <div class="head"><img class="head-logo" alt="Welcome Image" loading="lazy" src="http://webapp:3000/img/custom/logo-squared.svg">
        </div>
      </header>
      <h2>Hallo Jenny Rostock,</h2>
      <div class="wrapper">
        <div class="content"></div>
        <p>Du hast also dein Passwort vergessen? Kein Problem! Mit Klick auf diesen Button kannst du innerhalb der nächsten 24 Stunden dein Passwort zurücksetzen:</p><a class="button" href="http://webapp:3000/password-reset/change-password?email=user%40example.org&amp;nonce=123456">Bestätige deine E-Mail Adresse</a>
        <p>Falls du kein neues Passwort angefordert hast, kannst du diese E-Mail einfach ignorieren.</p>
        <p>Sollte der Button für dich nicht funktionieren, kannst du auch folgenden Code in dein Browserfenster kopieren: <span>123456</span></p>
        <div class="text-block">
          <p class="no-margin-top-bottom">Bis bald bei <a class="organization" href="https://ocelot.social">ocelot.social</a>!</p>
          <p class="no-margin-top-bottom">– Dein ocelot.social Team</p>
        </div>
      </div>
      <div class="support">
        <p class="no-margin-top-bottom">Wenn du Fragen oder Probleme hast, kannst du dich gerne an den Support wenden: <a href="mailto:devops@ocelot.social">devops@ocelot.social</a></p>
      </div>
      <footer>
        <div class="footer"></div><a href="https://ocelot.social">ocelot.social Community</a>
      </footer>
    </div>
  </body>
</html>",
  "subject": "Neues Passwort ocelot.social",
  "text": "HALLO JENNY ROSTOCK,

Du hast also dein Passwort vergessen? Kein Problem! Mit Klick auf diesen Button
kannst du innerhalb der nächsten 24 Stunden dein Passwort zurücksetzen:

Bestätige deine E-Mail Adresse
[http://webapp:3000/password-reset/change-password?email=user%40example.org&nonce=123456]

Falls du kein neues Passwort angefordert hast, kannst du diese E-Mail einfach
ignorieren.

Sollte der Button für dich nicht funktionieren, kannst du auch folgenden Code in
dein Browserfenster kopieren: 123456

Bis bald bei ocelot.social [https://ocelot.social]!

– Dein ocelot.social Team

Wenn du Fragen oder Probleme hast, kannst du dich gerne an den Support wenden:
devops@ocelot.social [devops@ocelot.social]


ocelot.social Community [https://ocelot.social]",
  "to": "user@example.org",
}
`;
